--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,126 @@
 body{
     background-color: rgb(20, 21, 22);
+    color: white;
 }
-
-
 
 .banner{
-    background-image: url("../img/ExisztHeader.png");
-    background-color: #cccccc;
-    height: 300px; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: cover;
+    display: flex;
 }
 
-.main{
-    background-color: aquamarine;
+.banner img {
+    max-width: 100%;
+    height: auto;
+}
+
+.topnav {
+    background-color: rgb(20, 21, 22);
+    overflow: hidden;
+    text-align: center;
+    padding: 14px 16px;
+    margin-bottom: 10px;
+}
+
+.topnav a {
+    float: center;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:visited {
+    color: #f2f2f2;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.main {
+    background-image: url(/img/background.png);
     width: 100%;
 }
 
-.releases{
+.featured-releases {
     text-align: center;
 }
 
-.cover1{
-    background-image: url("../img/HeartMachine.png");
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #fbfbfb;
+.featured-releases h1 {
+    font-size: 46px;
+    text-decoration: underline;
+    padding-top: 10px;
 }
 
+.covers {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.covers div {
+
+    padding: 10px;
+    flex: 1;
+}
+
+.covers img {
+    max-width: 100%;
+    height: auto;
+    width: 80%;
+    -webkit-filter: grayscale(80%);
+	filter: grayscale(80%);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.covers img:hover {
+    -webkit-filter: grayscale(0);
+	filter: grayscale(0);
+}
+
+.covers a {
+    text-decoration: none;
+}
+
+.main a:visited {
+    color: white;
+}
  
+.main a:hover {
+    background-color: #ddd;
+    color: aqua;
+}
+
+.main-body{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+    padding: 10px;
+}
+
+#bio-pic, #bio {
+    flex: 1;
+    padding: 20px;
+    margin: 10px;
+    max-width: 50%;
+    text-align: center;
+    font-size: 24px;
+}
+
+#bio h1 {
+    text-decoration: underline;
+}
+
+#bio-pic img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+#apperances{
+    text-align: center;
+}
