--- a/css/style.css
+++ b/css/style.css
@@ -55,21 +55,21 @@ body{
 
 .covers {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.covers div {
-
-    padding: 10px;
-    flex: 1;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .covers img {
-    max-width: 100%;
+    flex: 0 0 250px;
+    max-width: 275px;
+    width: 100%;
     height: auto;
-    width: 80%;
+    object-fit: cover;
+    border-radius: 10px;
     -webkit-filter: grayscale(80%);
 	filter: grayscale(80%);
 	-webkit-transition: .3s ease-in-out;
