--- a/css/releases.css
+++ b/css/releases.css
@@ -28,7 +28,7 @@
 .grid-item h3, .grid-item p {
     margin: 5px 0;
     font-size: 14px;
-    color: #333;
+    color: whitesmoke;
 }
 
 /* Responsive for smaller devices */
