--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
 }
 
 .main {
-    background-image: url(/img/background.png);
+    background-image: url(/Exiszt-Online/img/background.png);
     width: 100%;
 }
 
