--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body{
     color: aqua;
 }
 
-.main-body{
+.main-body {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -121,6 +121,40 @@ body{
     display: block;
 }
 
-#apperances{
+#apperances {
     text-align: center;
 }
+
+footer {
+    background-color: #333;
+    padding: 20px 0;
+    text-align: center;
+}
+  
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+  
+.social-icons {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+  
+.social-icons li {
+    margin: 0 15px;
+}
+
+.social-icons a img {
+    width: 40px;
+    height: 40px;
+    transition: transform 0.3s ease;
+}
+
+.social-icons a:hover img {
+    transform: scale(1.2);
+}
+  
