--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,7 @@ body{
 }
 
 footer {
-    background-color: #333;
-    padding: 20px 0;
+    padding: 20px 0 10px 0;
     text-align: center;
 }
   
